<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">Example App</string>


    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>

    <string name="hello">Hello World!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="SubmitBtn">Submit</string>
    <string name="Welcome">Welcome!</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Confirm">Confirm Password</string>
    <string name="Verify">Please verify your account</string>
    <string name="Thanks">Thanks </string>


</resources>